--- a/wilmington/package.json
+++ b/wilmington/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
     "apexcharts": "^4.7.0",
+    "axios": "^1.9.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
